adic (0.9.1-1) unstable; urgency=low

  * use dope network byte order stream

 -- Jens Thiele <jens@quark.karme-net.hirschau>  Fri,  2 May 2003 12:01:56 +0200

adic (0.9.0-1) unstable; urgency=low

  * added TCP_NODELAY option
  * Split into architecture dependent and independent packages.

 -- Jens Thiele (Karme) <karme@berlios.de>  Sat,  2 Nov 2002 16:41:38 +0100

adic (0.1.0-1) unstable; urgency=low

  * Initial Release.

 -- Jens Thiele (Karme) <karme@berlios.de>  Fri,  4 Oct 2002 00:40:12 +0200
