@@ -29,6 +29,8 @@
     <h3>2003-05-02: Not yet released (in cvs)</h3>
     <UL>
       <LI>use dope network byte order raw stream</LI>
+      <LI>meta-server now disabled by default</LI>
+      <LI>server may now report any address to meta-server</LI>
     </UL>
     <h3>2003-03-30: Released yet another beta (Version 0.9.0)</h3>
     <UL>
@@ -168,7 +170,7 @@
     <address><a href="mailto:jens.thiele@student.uni-tuebingen.de">Jens Thiele</a></address>
     <p>
       <!-- Created: Sun May 26 11:16:13 CEST 2002 -->
-<!-- hhmts start --> Last modified: Fri May  2 12:07:06 CEST 2003 <!-- hhmts end -->
+<!-- hhmts start --> Last modified: Fri May  2 13:11:23 CEST 2003 <!-- hhmts end -->
     </p>
     <p>
       <a href="http://validator.w3.org/check/referer">
