@@ -30,12 +30,16 @@ struct CommonConfig
 {
 public:
   CommonConfig() 
-    : m_port(ADIC_PORT), m_metaServer("http://adic.berlios.de/metaserver/index.php"), m_tcpNoDelay(true)
+    : m_port(ADIC_PORT), 
+      m_metaServer("http://adic.berlios.de/metaserver/index.php"), 
+      m_useMetaServer(false),
+      m_tcpNoDelay(true)
   {}
 
   unsigned short int m_port;
   std::string m_dataPath;
   std::string m_metaServer;
+  bool m_useMetaServer;
   bool m_tcpNoDelay;
 };
 DOPE_CLASS(CommonConfig);
@@ -45,6 +49,7 @@ inline void composite(Layer2 &layer2, CommonConfig &c)
   layer2.simple(c.m_port,"port")
     .simple(c.m_dataPath,"dataPath")
     .simple(c.m_metaServer,"metaServer")
+    .simple(c.m_useMetaServer,"useMetaServer")
     .simple(c.m_tcpNoDelay,"tcpNoDelay");
 }
 
